# ViperClient

./: bun.lockb  flake.nix  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
.direnv/: flake-profile-15-link  flake-profile-2-link  flake-profile-3-link
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  config.toml.example  tauri.conf.json
src-tauri/src/: config.rs  grpc_client.rs  lib.rs  main.rs
src/components/viper/: OptionMenu.tsx  Reticle.tsx
src/engine/: InterferenceEngine.ts  NetworkLayer.ts  RendererRegistry.ts  StateStore.ts  SyncEngine.ts  types.ts
src/hooks/viper/: useViperEntities.ts  useViperFilters.ts
src/lib/: wsClient.ts
src/lib/hooks/: useConfig.ts  useScale.ts
src/lib/models/: appConfig.ts
src/lib/viper/: entityUtils.ts  orbitalUtils.ts
